c2prj1_cards/grade.txt
Grading at Thu Dec 24 20:19:33 UTC 2020
Compiling cards.c
cards.c: In function ‘print_card’:
cards.c:61:17: error: implicit declaration of function ‘value__letter’ [-Werror=implicit-function-declaration]
   printf("%c%c",value__letter(c),suit_letter(c));
                 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
